fix z-index in theme menu

--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -9,6 +9,7 @@
   gap: 4px;
   cursor: pointer;
   padding: 15px;
+  z-index: 9999;
 }
 
 .menuTheme:hover {
